Fix header/sidebar overflow
When the header or sidebar overflows "..."'s will now be added cutting off run-on content.

--- a/src/styles.css
+++ b/src/styles.css
@@ -124,6 +124,7 @@ body {
     font-weight: 700;
 }
 
+
 .add-proj {
     font-size: 1rem;
     text-align: center;
@@ -180,9 +181,17 @@ button {
 }
 
 .editable-header {
-   font-style: italic;
+    font-style: italic;
+    display: inline-block;
+    min-width: 1ch;
 }
 
-.invisible {
-    /* display: none; */
+.overflow {
+    display: block;
+    justify-self: center;
+    width: 15ch;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    text-align: center;
 }
